Fix deploy workflow quoting and secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,14 +21,17 @@ jobs:
 
       - name: Write .clasp.json
         run: |
-          echo '{
-            "scriptId":"11qn78SG8gk7NAfwoOBVR5L57VkHSWh_yTaSXTqMfcMuqNF5Seap8BngQ",
+          cat <<'EOF' > .clasp.json
+          {
+            "scriptId": "11qn78SG8gk7NAfwoOBVR5L57VkHSWh_yTaSXTqMfcMuqNF5Seap8BngQ",
             "rootDir": "."
-          }' > .clasp.json
+          }
+          EOF
 
       - name: Write .clasprc.json file
-        run: |
-          echo '${{ secrets.CLASPRC_JSON }}' > ~/.clasprc.json
+        if: ${{ secrets.CLASPRC_JSON != '' }}
+        run: echo '${{ secrets.CLASPRC_JSON }}' > ~/.clasprc.json
 
       - name: Deploy to Google Apps Script
+        if: ${{ secrets.CLASPRC_JSON != '' }}
         run: clasp push --force
